# NCC_AI

./: .gitignore  app.py  gunicorn_config.py  ingest.py  main.py  privateGPT.py  pyproject.toml
